test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_32.k
schema Person:
    name: str = "kcl"
    age: int = 1

schema Data:
    x: Person = {
        age = "123"
    }
